Moose Improvements
Swimming, Breeding, Wandering
Added animations
Fix Moose Model